# zms.unibe

./: .env  .gitignore  .gitmodules  Dockerfile  Dockerfile.fastapi  Dockerfile.zms  Jenkinsfile  LICENSE  README.md  build.sh  compose.yaml  constraints-cmsapi.txt  constraints-fastapi.txt  constraints-flask.txt  constraints.txt  docker-compose-local.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements-fastapi.txt  requirements-flask.txt  requirements-zms3.txt  requirements.txt  script.js  setup.py  versions.env
.github/workflows/: build-and-push.yml  build-push-deploy.yml  deploy-tag-to-prod.yml  deploy-to-gh-pages.yml  deploy.yml
agenda/: 2025-04-06T11_05_35+02_00.json  agenda.html  script.js
announcement/: README.md  content.xml  index.html  script.js  style.css
app/: main.py
cmsapi/: app.py  cache.py  db.py  helpers.py  main.py  metadata.py
cmsapi/admin/: agendas.py  commands.py  db.py  main.py  mappings.py  newsevents.py  zmsobjects.py
cmsapi/cli/: agendas.py  commands.py  main.py  newsevents.py
cmsapi/docs/: cmsapi-0.0.1.json  cmsapi.json  index.html
cmsapi/mobileapp/: main.py  metadata.py
cmsapi/mobileapp/routers/: mediareleases.py  newsevents.py  servicelinks.py  uniaktuell.py
cmsapi/mobileapp/schemas/: mediareleases.py  uniaktuell.py
cmsapi/models/: agendas.py  mediareleases.py  mobileapp.py  newsbox.py  newsevents.py  servicelinks.py  teaserelement2022.py  uniaktuell.langdict.xml  uniaktuell.py  zmsdefaults.py  zmsobjects.py
cmsapi/resources/: announcement.py  announcementagenda.py  announcementcontainers.py  announcementoverview.py  canteen.py  servicelinks.py
cmsapi/routers/: mediareleases.py  mobileapp.py  newsevents.py  servicelinks.py  uniaktuell.py  zmscontent.py  zmsdefaults.py  zmsmodels.py  zmsobjects.py
cmsapi/schemas/: mediareleases.py  mobileapp.py  newsevents.py  servicelinks.py  uniaktuell.py  zmsdefaults.py  zmsobjects.py
cmsapi/templates/: index.html  show_entries.html
cmsapi/templates/flasgger/: swagger.html
cmsapi/zmscontent/: main.py  metadata.py
cmsapi/zmscontent/routers/: agenda.py  labels.py  objects.py  scheduler.py  zmscontent.py  zmsobjects.py
cmsapi/zmscontent/schemas/: agenda.py  zmsobjects.py
conf/: site.zcml  zope.conf  zope.ini
cron/afterwork/: 00_update_servicelinks  01_update_announcements  02_update_newboxes  02_update_newsboxes
cron/officehours/: 00_update_all  00_update_newsevents
cron/weekly/: 00_update_all  00_update_zmsobjects
dev/: README.md
docs/: Dockerfile  examples.md  index.md  newsevents-api-draft.md  requirements.txt
flask-zodb/: flask_zodb.py  tox.ini
ikim/: README.md  content.xml  index.html  script.js
init_scripts/: 98_cronSetUp  99_fastapiStartUp  99_flaskStartUp
kirchenbautag/: 2023-08-30T1000120200_ger.csv  2023-09-01T1006280200_ger.csv  kirchenumnutzung-de.csv  moderner-kirchenbau.xml
pariscms/: README.md  index.html  script.js  zmsdatatable.xml
site/: 404.html  extra.css  index.html  sitemap.xml
site/examples/: index.html
site/newsevents-api-draft/: index.html
site/overrides/partials/: source-file.html
site/search/: search_index.json
sozinno/: EN-Inventar-Website-Soziale-Innovationen-2020_08_06-a_eng.csv  content.xml  script.js
src/zms/unibe/: __init__.py  configure.zcml
src/zms/unibe/agenda/: AgendaBridge.py  OutlookConnector.py  fetch_agendas.py  helpers.py
src/zms/unibe/agenda/schemas/: AgendaFilemaker.py  AgendaLibrary.py  AgendaOutlook.py  README.md  ZMSAgenda.py  ZMSAgendaEventSchema.py  ZMSAgendaFilemakerSchema.py  ZMSAgendaITStatusMessageSchema.py  ZMSAgendaInfotageSchema.py  ZMSAgendaLibrarySchema.py  ZMSAgendaNewsBoxSchema.py  ZMSAgendaOutlookSchema.py  ZMSAgendaRecordsetSchema.py  ZMSAgendaTeaserElement2022Schema.py  ZMSAgendaUniBEEventSchema.py  ZMSObjects.py
src/zms/unibe/agenda/sqlmodels/: AgendaFilemaker.py  AgendaLibraryDE.py  AgendaLibraryEN.py  StatusMessages.py  ZMSAgenda.py  __main__.py
src/zms/unibe/announcements/schemas/: MediaReleasesSchema.py
src/zms/unibe/announcements/sqlmodels/: AlertBox.py  InfoBox.py  MediaNews.py  NewsBox.py  NewsContainer.py  __main__.py
src/zms/unibe/contacts/sqlmodels/: ContactBox.py  ContactBoxSection.py  Person.py  Team.py  TeamSection.py  __main__.py
src/zms/unibe/datatables/sqlmodels/: ZMSBoris.py  ZMSDataTable.py  __main__.py
src/zms/unibe/fastapi/: main.py  meta.py
src/zms/unibe/fastapi/mobileapp/: mediareleases.py  newsevents.py  servicelinks.py  uniaktuell.py
src/zms/unibe/fastapi/zmscontent/: agenda.py  labels.py  managers.py  objects.py  scheduler.py  system.py
src/zms/unibe/formulator/sqlmodels/: ZMSFormulator.py  ZMSSurveyJS.py  ZMSSurveyJSAttachments.py  ZMSSurveyJSSubmissions.py  __main__.py
src/zms/unibe/foundation/: ZMSSiteOverview.py
src/zms/unibe/foundation/sqlmodels/: CodeBlock.py  ZMSBase.py  ZMSDocument.py  ZMSFile.py  ZMSFolder.py  ZMSGraphic.py  ZMSSite.py  ZMSTable.py  ZMSTextarea.py  __main__.py
src/zms/unibe/layouts/sqlmodels/: ContentPane.py  ContentTabs.py  TwoCols.py  UniBEEvent.py  UniBEFactsheet.py  WeiterbildungStudiengang.py  __main__.py
src/zms/unibe/maintenance/sqlmodels/: ZMSSchedulerRegistry.py
src/zms/unibe/mobileapp/: update_newsevents.py
src/zms/unibe/mobileapp/schemas/: NewsEventsSchema.py  ServiceLinksSchema.py
src/zms/unibe/mobileapp/sqlmodels/: NewsEvents.py  ServiceLinks.py  StatusMessages.py  __main__.py
src/zms/unibe/patches/: __init__.py  configure.zcml
src/zms/unibe/patches/monkey/: ExternalMethod_always_reloadIfChanged.py  MemCached_log_instead_raise_ConnectionError.py  getFuncDetails.py  tcp_vote.py
src/zms/unibe/patches/security/: assertations.py  assertions.py
src/zms/unibe/teasers/sqlmodels/: Hero.py  Hero2022.py  TeaserContainer2022.py  TeaserElement2022.py  __main__.py
src/zms/unibe/uniaktuell/schemas/: UniaktuellSchema.py
src/zms/unibe/uniaktuell/sqlmodels/: UniaktuellArticle.py  __main__.py
src/zms/unibe/utils/: db.py  enums.py  headless.py  helpers.py
tree/: BORIS_export_2020-12-10_ger.json  content.xml
webinare/: SCHEMA.md  index.html  script.js  zmsdatatable.xml
(+71 files in other folders)
